Deployment/friendzy-api-gateway-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw-deployment
  namespace: friendzy
  labels:
    app: apigateway
    env: production
    project: friendzy-socialmedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigw-service
          image: shahabaz4573/api-gateway:3.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: apigw-service
  namespace: friendzy
  labels:
    app: apigateway
    env: production
    project: friendzy-socialmedia
spec:
  type: NodePort
  selector:
    app: apigateway
  ports:
    - targetPort: 8000
      port: 8000
      nodePort: 30003
