Deployment/kafka-k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: friendzy
  labels:
    service: kafka
spec:
  serviceName: friendzy-kafka  # Matches the Service name below
  replicas: 1
  selector:
    matchLabels:
      service: kafka
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: kafka
    spec:
      securityContext:
        fsGroup: 1000
      enableServiceLinks: false
      containers:
        - name: friendzy-kafka
          imagePullPolicy: IfNotPresent
          image: confluentinc/cp-kafka:7.0.1
          ports:
            - containerPort: 9094
              name: internal
            - containerPort: 9092
              name: external
          volumeMounts:
            - mountPath: /var/lib/kafka/data
              name: kafka-data
              subPath: kafka-subpath
      hostname: kafka-0  # Explicitly set the hostname
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: my-storage-class
        resources:
          requests:
            storage: 100Mi  # Increased for production use
---
apiVersion: v1
kind: Service
metadata:
  name: friendzy-kafka
  namespace: friendzy
  labels:
    service: kafka
spec:
  clusterIP: None  # Required for StatefulSet
  selector:
    service: kafka
  ports:
    - name: internal
      port: 9094
      targetPort: 9094
    - name: external
      port: 9092
      targetPort: 9092
