Deployment/redis-k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: friendzy
  labels:
    app: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: redis-data
              mountPath: /data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: my-storage-class
        resources:
          requests:
            storage: 10Mi

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: friendzy
  labels:
    app: redis
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
