Deployment/zookeeper-k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: friendzy
  labels:
    service: zookeeper

spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      service: zookeeper
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: zookeeper
    spec:
      securityContext:
        fsGroup: 1000
      enableServiceLinks: false
      containers:
        - name: zookeeper
          imagePullPolicy: Always
          image: confluentinc/cp-zookeeper:7.3.2
          ports:
            - containerPort: 2181
          volumeMounts:
            - mountPath: /var/lib/zookeeper/data
              name: zookeeper-data
              subPath: zookeeper-subpath
            - mountPath: /var/lib/zookeeper/log
              name: zookeeper-log
              subPath: zookeeper-subpath
      hostname: zookeeper
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: zookeeper-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: my-storage-class
        resources:
          requests:
            storage: 100Mi
    - metadata:
        name: zookeeper-log
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: my-storage-class
        resources:
          requests:
            storage: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: friendzy
spec:
  type: ClusterIP
  selector:
    service: zookeeper
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
