Deployment/ingress-resource-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: friendzy-ingress
  namespace: friendzy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production" # Ensure the correct ClusterIssuer is referenced
    kubernetes.io/ingress.class: "nginx" # NGINX ingress class
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  tls:
    - hosts:
        - friendzy.shahabazsulthan.cloud
      secretName: friendzy-new-tls # Secret where the certificate will be stored
  rules:
    - host: friendzy.shahabazsulthan.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apigw-service # Ensure this service name is correct
                port:
                  number: 8000 # Ensure the service is exposing this port
